commits up to nerf sikh added

--- a/localisation/gecko_advisors_l_english.yml
+++ b/localisation/gecko_advisors_l_english.yml
@@ -4,3 +4,6 @@
 
  gc_arty_officer:0 "Artillery Officer"
  gc_arty_officer_desc:0 "Cannon goes boom"
+
+ gc_inquisitor:0 ""
+ gc_inquisitor_dec:0 ""
