--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -169,3 +169,35 @@ gc_eth_mission_22_desc:0 ""
 gc_eth_mission_23_desc:0 ""
 gc_eth_mission_24_desc:0 ""
 gc_eth_mission_25_desc:0 ""
+
+ #Crimea 
+
+ gc_cri_mission_1_title:0 "Ruin Ruthenia"
+ gc_cri_mission_2_title:0 "Settle Ruthenia"
+ gc_cri_mission_3_title:0 "Crimean Expansion"
+ gc_cri_mission_4_title:0 "Conquer Moldavia"
+ gc_cri_mission_5_title:0 "Settle Moldavia"
+ gc_cri_mission_6_title:0 "Settle Crimea"
+ gc_cri_mission_7_title:0 "Settle the Coast"
+ gc_cri_mission_8_title:0 "Wolgan Settlements"
+ gc_cri_mission_9_title:0 "Claim the Hetmanate"
+ gc_cri_mission_10_title:0 "North Expansion"
+ gc_cri_mission_11_title:0 "Unite the Tatars"
+ gc_cri_mission_12_title:0 "Annex Bashkiria"
+ gc_cri_mission_13_title:0 "East Expansion"
+ gc_cri_mission_14_title:0 "Seize Nogai"
+
+ gc_cri_mission_1_desc:0 ""
+ gc_cri_mission_2_desc:0 ""
+ gc_cri_mission_3_desc:0 "The Event gives a bunch of development on the Crimean peninsula as well as cores."
+ gc_cri_mission_4_desc:0 ""
+ gc_cri_mission_5_desc:0 ""
+ gc_cri_mission_6_desc:0 ""
+ gc_cri_mission_7_desc:0 ""
+ gc_cri_mission_8_desc:0 ""
+ gc_cri_mission_9_desc:0 ""
+ gc_cri_mission_10_desc:0 ""
+ gc_cri_mission_11_desc:0 "The Event adds 4 development of each type to the Capital."
+ gc_cri_mission_12_desc:0 ""
+ gc_cri_mission_13_desc:0 ""
+ gc_cri_mission_14_desc:0 ""
