--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -2212,13 +2212,11 @@
  north_sea:0 "North Sea"
  bordeaux:0 "Bordeaux"
  sevilla:0 "Sevilla"
- genua:0 "Genoa"
  crimea:0 "Crimea"
  kiev:0 "Kiev"
  kazan:0 "Kazan"
  astrakhan:0 "Astrakhan"
  krakow:0 "Krakow"
- venice:0 "Venice"
  frankfurt:0 "Frankfurt"
  antwerpen:0 "Antwerpen"
  london:0 "London"
@@ -2428,10 +2426,10 @@
  SORT_UNITY:0 "Sort by the impact on religious unity converting this province will have."
  UNITY_IMPACT:0 "Converting $NAME$ will increase religious unity by $CHANGE$.\nIt currently increases it by $CURR|Y$."
  CONVERT:0 "Convert"
- CONVERT_SECONDARY:0 "Choose Syncretic Faith"
+ CONVERT_SECONDARY:0 ""
  NO_CONVERT_POSSIBLE:0 "§Y$RELIGION$§! is not allowed to convert to another religion."
- NO_POTENTIAL_RELIGION:0 "There are no potential religions to convert to right now."
- NO_POTENTIAL_SECONDARY_RELIGION:0 "There are no potential Syncretic Faiths to choose right now."
+ NO_POTENTIAL_RELIGION:0 ""
+ NO_POTENTIAL_SECONDARY_RELIGION:0 ""
  cb_defender_of_the_faith_desc:0 "They are not loyal to the true faith!"
  RELIGIUS_UNITY_LABEL_D:0 "It's always good to unite all your provinces under the same religion. Religious unity under 100% increases the local unrest and decreases your influence over the Papacy if your state religion is Catholicism."
  RELIG_PERFECT:0 "We have achieved religious unity in $COUNTRY$ and live in harmony!"
@@ -2442,7 +2440,7 @@
  HAVE_MORE_RELIGIUS_UNITY_THAN:0 "Have religious unity of at least "
  CV_IDEAS_PROGRESS:0 "You need to unlock §Y$NUM_IDEAS$§W more Idea(s) from any Idea group to unlock the next National Idea."
  CONVERT_TO:0 "Convert to $NAME$."
- CONVERT_TO_SECONDARY:0 "Choose §Y$NAME$§! as Syncretic Faith."
+ CONVERT_TO_SECONDARY:0 ""
  NEED_MONEY:0 "You need $MONEY$ gold."
  CANT_CLAIM_DEFENDER:0 "You can't claim the title because of the following reasons:"
  NEED_MORE_PRESTIGE_THAN_DEFENDER:0 "You need more prestige than the current defender."
