Free colonist loc

--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -24,3 +24,5 @@
  gc_war_taxes_notification_desc:0 "You're using War Taxes. You might want to deactivate them."
  great_zimbabwe_title:0 "Proclaim Great Zimbabwe"
  great_zimbabwe_desc:0 "We must unite East Africa and proclaim Great Zimbabwe."
+ free_colonist_title:0 "Settle the World"
+ free_colonist_desc:0 "Recent discoveries have lead to a great demand for Crown sponsored colonies."
