--- a/localisation/persia_changes_l_english.yml
+++ b/localisation/persia_changes_l_english.yml
@@ -69,7 +69,7 @@
  #ottomans#
  mechanic_enables_janissary_estate_yes: "Janissaries Estate becomes available."
  mechanic_enables_janissary_estate_no: " " #intentionally empty
- mechanic_upgrade_janissary_weaponry_privilege_interaction_yes: "Enables the Janissaries Estate Privilege §YUpgrade Janissary Weaponry§!, which grants §G+0.15§! Infantry Fire and §R+10.0%§! Land Maintenance Modifier to §YJanissary Regiments§!"
+ mechanic_upgrade_janissary_weaponry_privilege_interaction_yes: "Enables the Janissaries Estate Privilege §YUpgrade Janissary Weaponry§!, which grants §G+0.10§! Infantry Fire to §YJanissary Regiments§!"
  mechanic_upgrade_janissary_weaponry_privilege_interaction_no: " " #intentionally empty
  mechanic_establish_auxiliary_support_system_privilege_interaction_yes: "Enables the Janissaries Estate Privilege §YEstablish Janissary Auxiliary Corps§!, which grants §G+5.0%§! Manpower Recovery Speed and §G+10.0%§! Reinforce Speed."
  mechanic_establish_auxiliary_support_system_privilege_interaction_no: " " #intentionally empty
