ghostprovince 4166 adj name changed too

--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -3142,7 +3142,7 @@
  PROV_ADJ4163:0 "Elfsborgian"
  PROV_ADJ4164:0 "Dalian"
  PROV_ADJ4165:0 "Göingian"
- PROV_ADJ4166:0 "Tiohäradian"
+ PROV_ADJ4166:0 "4166 REPORT TO GM"
  PROV_ADJ4171:0 "Aburquhan"
  PROV_ADJ4173:0 "Syrmian"
  PROV_ADJ4174:0 "Durresian"
