ghost prov 4678 renamed

--- a/localisation/manchu_l_english.yml
+++ b/localisation/manchu_l_english.yml
@@ -594,8 +594,8 @@
  PROV_ADJ4676:1 "Badain Jaran"
  PROV4677:1 "Noyon"
  PROV_ADJ4677:1 "Noyon"
- PROV4678:1 "Sain Noyon"
- PROV_ADJ4678:1 "Sain Noyon"
+ PROV4678:1 "4678 REPORT TO GM"
+ PROV_ADJ4678:1 "4678 REPORT TO GM"
  PROV4679:1 "Khovsgol"
  PROV_ADJ4679:1 "Khovsgol"
  PROV4680:1 "Zakhchin"
