--- a/localisation/gecko_mercs_l_english.yml
+++ b/localisation/gecko_mercs_l_english.yml
@@ -2,5 +2,5 @@
  gecko_independent_army_1:0 "Independent Company"
  gecko__local_independent_army_1:0 "Local Independent Army"
  gecko__local_independent_army_2:0 "Local Independent Reserve"
- gecko_merc_black_army_1:0 "Infantery Reserve"
- gecko_merc_black_army_2:0 "Cavalry Reserve"
+ gecko_merc_black_army_1:0 "Black Army Infantry Reserve"
+ gecko_merc_black_army_2:0 "Black Army Cavalry Reserve"
