influence march loc

--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -72,3 +72,4 @@
  crimean_raids:0 "Crimean Raids"
  h_swedish_armies:0 "Lion of the North"
  h_swedish_armies_desc:0 "Gustavus Adolphus would go on to lead Sweden to victory in numerous wars and battles, while also setting in motion the rise of Sweden after his death. He is credited for being the 'father of modern warfare' and is regarded as one of the greatest military commanders in modern history."
+ gc_take_influence_ideas_for_marches:0 "Has Marcher Lord unlocked in Influence Ideas"
