Added aristo cav mercs

--- a/localisation/gecko_mercs_l_english.yml
+++ b/localisation/gecko_mercs_l_english.yml
@@ -4,3 +4,4 @@
  gecko__local_independent_army_2:0 "Local Independent Reserve"
  gecko_merc_black_army_1:0 "Black Army Infantry Reserve"
  gecko_merc_black_army_2:0 "Black Army Cavalry Reserve"
+ gecko_merc_aristo_ideas:0 "Local Cavalry Company"
