--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -68,7 +68,7 @@
  #Timurids 
 
  gc_tim_events.1.t:0 "New Heir of Timur"
- gc_tim_events.1.d:0 "As the descendant of Timur Lenk, the great conqueror of Iran, Transoxiana and Khorasan, it is our duty to reclaim his legacy. With the traditional Timurid Strongholds under our control we can at last proclaim ourselves the head of Timur's dynasty, and the leader of all of the Ghurkani princes."
+ gc_tim_events.1.d:0 "Sword of Islam, Conqueror of the World. The latest claimant to the title of heir of Timur has declared themselves an empire in His Name. Only time will tell if history will repeat itself. For the sake of innocent people everywhere, let us hope it does not."
  gc_tim_events.1.a:0 "One to rule them all"
 
 
