--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -26,3 +26,5 @@
  great_zimbabwe_desc:0 "We must unite East Africa and proclaim Great Zimbabwe."
  free_colonist_title:0 "Settle the World"
  free_colonist_desc:0 "Recent discoveries have lead to a great demand for Crown sponsored colonies."
+ urbanisation_title:0 "Force Urbanisation"
+ urbanisation_desc:0 "Although our state is developing at a pleasing rate, it could be faster. We could focus all our resources into centralising the state. However diverting funding away from the army will have its consequences.."
