empowered_subjects loc

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -34,6 +34,7 @@
  third_rome:0 "The Third Rome"
  desc_third_rome:0 "We have conquered the City of World's Desire. This achievement has provided our armies with unrelenting fervour for the Russian state."
  gc_urbanisation:0 "Forced Urbanisation"
+ empowered_subjects:0 "Empowered Subject"
 
  #Province Triggered Modifiers
  conquest_of_constantinople:0 "Conquest of Constantinople"
