French region updated

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3727,3 +3727,17 @@
  RAND_SEA_NAME077:0 "Sea of Test77"
  RAND_SEA_NAME078:0 "Sea of Test78"
  RAND_SEA_NAME079:0 "Sea of Test79"
+
+PROV6081:0 "Rouen"
+PROV6082:0 "Lisieux"
+PROV6083:0 "Vermandois"
+PROV6084:0 "Champagne"
+PROV6085:0 "Perche"
+PROV6086:0 "Angers"
+PROV6087:0 "Saumur"
+PROV6088:0 "Courtenay"
+PROV6089:0 "Arras"
+PROV6090:0 "Porcien"
+PROV6091:0 "Toul"
+PROV6092:0 "Tonnerre"
+PROV6093:0 "Bourgogne"
