Aquitaine region updated

--- a/localisation/gc_areas_regions_l_english.yml
+++ b/localisation/gc_areas_regions_l_english.yml
@@ -2,3 +2,6 @@
 siena_area:0 "Siena"
 siena_name:0 "Siena"
 siena_area_adj:0 "Sienan"
+cahors_area:0 "Cahors"
+cahors_name:0 "Cahors"
+cahors_area_adj:0 "Cahor"
