--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3741,3 +3741,7 @@ PROV6090:0 "Porcien"
 PROV6091:0 "Toul"
 PROV6092:0 "Tonnerre"
 PROV6093:0 "Bourgogne"
+PROV6094:0 "Albret"
+PROV6095:0 "Castillon"
+PROV6096:0 "Tartas"
+PROV6098:0 "Cahors"
