All nations have generic mission tree for administration

--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -28,5 +28,5 @@
  free_colonist_desc:0 "Recent discoveries have lead to a great demand for Crown sponsored colonies."
  urbanisation_title:0 "Force Urbanisation"
  urbanisation_desc:0 "Although our state is developing at a pleasing rate, it could be faster. We could focus all our resources into centralising the state. However diverting funding away from the army will have its consequences.."
- sm_hire_recruitmaster_title:0 "Hire a Recruit Master"
- sm_hire_recruitmaster_desc:0 "We will need the expertise of a Recruit Master to improve the quality of our Army."
+ sm_hire_recruitmaster_title:0 "Hire a Master Recruiter"
+ sm_hire_recruitmaster_desc:0 "It would be wise to use the foreign expertise available to us to help bring fresh manpower into our ranks."
