--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -30,3 +30,11 @@
  urbanisation_desc:0 "Although our state is developing at a pleasing rate, it could be faster. We could focus all our resources into centralising the state. However diverting funding away from the army will have its consequences.."
  sm_hire_recruitmaster_title:0 "Hire a Master Recruiter"
  sm_hire_recruitmaster_desc:0 "It would be wise to use the foreign expertise available to us to help bring fresh manpower into our ranks."
+ PR_manpower_edict_title:0 "National Manpower Edict"
+ PR_manpower_edict_desc:0 "Activate a manpower edict modifier in all states without an activated edict. No edicts can be applied to states with this modifier. Can be removed in 1 year."
+ PR_manpower_edict_tooltip:0 "+§Y25%§! Manpower and +§R200%§! State Maintenance in all states without an active edict"
+ PR_manpower_edict_removal_title:0 "Deactivate National Manpower Edict"
+ PR_manpower_edict_removal_desc:0 "Removes manpower edict modifier from all provinces."
+ PR_manpower_edict_cooldown:0 "Provincial Manpower Edict"
+ PR_manpower_edict_removal_tooltip:0 "Has been 1 year since activating National Manpower Edict."
+ PR_manpower_edict_province:0 "Provincial Manpower Edict"
