Trans-Saharan provinces named and given -2 build slots & 50% dev cost

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -35,6 +35,7 @@
  desc_third_rome:0 "We have conquered the City of World's Desire. This achievement has provided our armies with unrelenting fervour for the Russian state."
  gc_urbanisation:0 "Forced Urbanisation"
  empowered_subjects:0 "Empowered Subject"
+ gc_african_corridor:0 "Trans-Saharan Corridor"
 
  #Province Triggered Modifiers
  conquest_of_constantinople:0 "Conquest of Constantinople"
