--- a/localisation/gecko_area_names_l_english.yml
+++ b/localisation/gecko_area_names_l_english.yml
@@ -7,9 +7,9 @@
  pr_africa_area_6:0 "Djado Area"
  pr_africa_area_7:0 "Al Abyad Area"
  pr_africa_area_8:0 "Tajarhi Area"
- pr_africa_area_9:0 ""
- pr_africa_area_10:0 ""
- pr_africa_area_11:0 ""
- pr_africa_area_12:0 ""
- pr_africa_area_13:0 ""
- pr_africa_area_14:0 ""
+ pr_africa_area_9:0 "1"
+ pr_africa_area_10:0 "2"
+ pr_africa_area_11:0 "3"
+ pr_africa_area_12:0 "4"
+ pr_africa_area_13:0 "5"
+ pr_africa_area_14:0 "6"
