Bohemia region updated with 12 new provinces

--- a/localisation/gc_areas_regions_l_english.yml
+++ b/localisation/gc_areas_regions_l_english.yml
@@ -5,3 +5,12 @@ siena_area_adj:0 "Sienan"
 cahors_area:0 "Cahors"
 cahors_name:0 "Cahors"
 cahors_area_adj:0 "Cahor"
+hradecko_area:0 "Hradecko"
+hradecko_name:0 "Hradecko"
+hradecko_area_adj:0 "Hradeck"
+opole_area:0 "Opole"
+opole_name:0 "Opole"
+opole_area_adj:0 "Opolen"
+breg_area:0 "Breg"
+breg_name:0 "Breg"
+breg_area_adj:0 "Bregen"
