--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3747,3 +3747,15 @@ PROV6096:0 "Tartas"
 PROV6098:0 "Cahors"
 PROV6099:0 "Buda"
 PROV6100:0 "Bodrog"
+PROV6101:0 "Loket"
+PROV6102:0 "Kourim"
+PROV6103:0 "Slany"
+PROV6104:0 "Boleslav"
+PROV6105:0 "Caslav"
+PROV6106:0 "Znojmo"
+PROV6107:0 "Troppau"
+PROV6108:0 "Nisa"
+PROV6109:0 "Breg"
+PROV6110:0 "Schweidnitz"
+PROV6111:0 "Javor"
+PROV6112:0 "Krosno"
