Mamluk privilege to raise cav levies added

--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -72,4 +72,8 @@
  gc_tim_events.1.a:0 "One to rule them all"
 
 
- 
+ #Estate privs
+gecko.8.t:0 "Nobility Levies"
+gecko.8.d:0 "The levies previously provided by our Nobles have been put to good use. We now have an opportunity to press them for service again, however they will not like it."
+gecko.8.a:0 "Do nothing."
+gecko.8.b:0 "Seize back their influence and press them for levies again."
