Mams get smole CCA and cost from a mission

--- a/localisation/gecko_privileges_l_english.yml
+++ b/localisation/gecko_privileges_l_english.yml
@@ -18,7 +18,7 @@
  estate_nomadic_tribes_tribute_desc:0 " "
 
 
-#mamlukl privilege
+#mamluk privilege
 
 estate_gc_noble_levies:0 "Mamluk Noble Levies"
 estate_gc_noble_levies_desc:0 " "
