--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -237,8 +237,8 @@
  obj_force_converted_tooltip:1 "Forced another nation to change their religion\n"
  obj_asian_trade:0 "Asian Trade"
  obj_asian_trade_desc:0 "Gain the trade bonus from either Cloves, Silk, Spices or Chinaware."
- obj_unify_culture:0 "Unify Culture"
- obj_unify_culture_desc:0 "Own all provinces of your culture group."
+ obj_unify_culture:0 "Potential for a Large Army"
+ obj_unify_culture_desc:0 "Have a land force limit of at least 150 regiments."
  num_converted_religion:0 "Provinces Converted"
  num_objectives_fullfilled:0 "Fulfilled Objectives"
  obj_religious_league_war_on_winning_side_tooltip:1 "We were on the winning side in the Religious League War"
@@ -306,7 +306,7 @@
  ab_dutch_anti_corruption:0 "Gunpowder Empire"
  ab_sweden_manpower:0 "Swedish Recruitment"
  ab_manchu_banner:0 "Manchu Banners"
- ab_allow_anti_revolutionary_zeal:0 "Anti-Revolutionary Zeal"
+ ab_allow_anti_revolutionary_zeal:0 "Expanded Army Corps"
  ab_napoleonic_warfare:0 "Napoleonic Warfare"
  ab_force_march:0 "Improved Force March"
  ab_more_ships_can_fire:0 "Naval Engagement"
