--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -153,7 +153,7 @@ gc_eth_mission_6_desc:0 ""
 gc_eth_mission_7_desc:0 ""
 gc_eth_mission_8_desc:0 ""
 gc_eth_mission_9_desc:0 ""
-gc_eth_mission_10_desc:0 ""
+gc_eth_mission_10_desc:0 "Changes Government Type to Ethiopian Theocracy."
 gc_eth_mission_11_desc:0 ""
 gc_eth_mission_12_desc:0 ""
 gc_eth_mission_13_desc:0 ""
@@ -167,8 +167,8 @@ gc_eth_mission_20_desc:0 ""
 gc_eth_mission_21_desc:0 ""
 gc_eth_mission_22_desc:0 ""
 gc_eth_mission_23_desc:0 ""
-gc_eth_mission_24_desc:0 ""
-gc_eth_mission_25_desc:0 ""
+gc_eth_mission_24_desc:0 "Gives -1 Yearly Prestige Decay and 2 Tolerance of True Faith."
+gc_eth_mission_25_desc:0 "Gives -1 Army Tradition Decay and 10% Movementspeed"
 
  #Crimea 
 
