--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -168,7 +168,7 @@ gc_eth_mission_21_desc:0 ""
 gc_eth_mission_22_desc:0 ""
 gc_eth_mission_23_desc:0 ""
 gc_eth_mission_24_desc:0 "Gives -1 Yearly Prestige Decay and 2 Tolerance of True Faith."
-gc_eth_mission_25_desc:0 "Gives -1 Army Tradition Decay and 10% Movementspeed"
+gc_eth_mission_25_desc:0 "Gives -1 Army Tradition Decay and 10% Movementspeed."
 
  #Crimea 
 
