African provinces names

--- a/localisation/gecko_prov_ADJ_l_english.yml
+++ b/localisation/gecko_prov_ADJ_l_english.yml
@@ -30,3 +30,25 @@
  PROV5828_ADJ:0 "Al Wigh"
  PROV5829_ADJ:0 "Dirkou"
  PROV5830_ADJ:0 "Bilma"
+ PROV5831_ADJ:0 "Makeni"
+ PROV5832_ADJ:0 "Foya"
+ PROV5833_ADJ:0 "Gbarnga"
+ PROV5834_ADJ:0 "Nzerekore"
+ PROV5835_ADJ:0 "Ganta"
+ PROV5836_ADJ:0 "Gagnoa"
+ PROV5837_ADJ:0 "Daloa"
+ PROV5838_ADJ:0 "Soubre"
+ PROV5839_ADJ:0 "Kumba"
+ PROV5840_ADJ:0 "Nkonqsamba"
+ PROV5841_ADJ:0 "Bafoussam"
+ PROV5842_ADJ:0 "Yingi"
+ PROV5843_ADJ:0 "Douala"
+ PROV5844_ADJ:0 "Edea"
+ PROV5845_ADJ:0 "Ngambe"
+ PROV5846_ADJ:0 "Pouma"
+ PROV5847_ADJ:0 "Ngog-Mapubi"
+ PROV5848_ADJ:0 "Nkoua"
+ PROV5849_ADJ:0 "Mbebe"
+ PROV5850_ADJ:0 "Melondo"
+ PROV5851_ADJ:0 "Lolodorf"
+ PROV5852_ADJ:0 "Nsola"
