--- a/localisation/gecko_prov_names_l_english.yml
+++ b/localisation/gecko_prov_names_l_english.yml
@@ -30,4 +30,25 @@
  PROV5828:0 "Al Wigh"
  PROV5829:0 "Dirkou"
  PROV5830:0 "Bilma"
- 
+ PROV5831:0 "Makeni"
+ PROV5832:0 "Foya"
+ PROV5833:0 "Gbarnga"
+ PROV5834:0 "Nzerekore"
+ PROV5835:0 "Ganta"
+ PROV5836:0 "Gagnoa"
+ PROV5837:0 "Daloa"
+ PROV5838:0 "Soubre"
+ PROV5839:0 "Kumba"
+ PROV5840:0 "Nkonqsamba"
+ PROV5841:0 "Bafoussam"
+ PROV5842:0 "Yingi"
+ PROV5843:0 "Douala"
+ PROV5844:0 "Edea"
+ PROV5845:0 "Ngambe"
+ PROV5846:0 "Pouma"
+ PROV5847:0 "Ngog-Mapubi"
+ PROV5848:0 "Nkoua"
+ PROV5849:0 "Mbebe"
+ PROV5850:0 "Melondo"
+ PROV5851:0 "Lolodorf"
+ PROV5852:0 "Nsola"
