my desert my dune my arrakis

--- a/localisation/gecko_prov_ADJ_l_english.yml
+++ b/localisation/gecko_prov_ADJ_l_english.yml
@@ -6,7 +6,7 @@
  PROV5804_ADJ:0 "North Taoudenni"
  PROV5805_ADJ:0 "South Taoudenni"
  PROV5806_ADJ:0 "Walatah"
- PROV5807_ADJ:0 "Taghaza"
+ PROV5807_ADJ:0 "Arrakis"
  PROV5808_ADJ:0 "Nema"
  PROV5809_ADJ:0 "Oualata"
  PROV5810_ADJ:0 "Timbedra"
