--- a/localisation/gecko_prov_names_l_english.yml
+++ b/localisation/gecko_prov_names_l_english.yml
@@ -6,7 +6,7 @@
  PROV5804:0 "North Taoudenni"
  PROV5805:0 "South Taoudenni"
  PROV5806:0 "Walatah"
- PROV5807:0 "Taghaza"
+ PROV5807:0 "Arrakis"
  PROV5808:0 "Nema"
  PROV5809:0 "Oualata"
  PROV5810:0 "Timbedra"
