--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -38,3 +38,4 @@
  PR_manpower_edict_cooldown:0 "Provincial Manpower Edict"
  PR_manpower_edict_removal_tooltip:0 "Has been 1 year since activating National Manpower Edict."
  PR_manpower_edict_province:0 "Provincial Manpower Edict"
+ timurid_nation_title:0 "Reform the Timurid Empire"
