--- a/localisation/gecko_ages_l_english.yml
+++ b/localisation/gecko_ages_l_english.yml
@@ -2,8 +2,8 @@
 
  #Age 1
  ab_burgundy_merc_manpower:0 "Burgundian Mercenaries"
- ab_timurids_tech:0 "Universities of Timur"
- ab_mamluks_force_limit:0 "Mamluk Production"
+ ab_timurids_tech:0 "Timurid Renaissance"
+ ab_mamluks_force_limit:0 "Granary of the Mediterranean"
  ab_morocco_raids:0 "Moroccan Pirates"
 
  #Age 2
