--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -110,3 +110,7 @@
  #Portugal
  cape_trade_established:0 "Cape City Established"
  prester_john_discovered:0 "Prester John Discovered"
+
+ #My Desert
+ my_desert:0 "My Desert, My Arrakis, My Dune."
+ desc_my_desert:0 "Now I have only one requirement. Income."
