Bunker mamluks and middle east provinces merged

--- a/localisation/gecko_prov_ADJ_l_english.yml
+++ b/localisation/gecko_prov_ADJ_l_english.yml
@@ -52,3 +52,10 @@
  PROV5850_ADJ:0 "Melondo"
  PROV5851_ADJ:0 "Lolodorf"
  PROV5852_ADJ:0 "Nsola"
+ PROV6112_ADJ:0 "Beirut"
+ PROV6113_ADJ:0 "Lakatia"
+ PROV6114_ADJ:0 "Sifilke"
+ PROV6115_ADJ:0 "Tarsus"
+ PROV6116_ADJ:0 "Sis"
+ PROV6117_ADJ:0 "Yozgat"
+ PROV6118_ADJ:0 "West Erzincan"
