--- a/localisation/gecko_prov_names_l_english.yml
+++ b/localisation/gecko_prov_names_l_english.yml
@@ -52,3 +52,41 @@
  PROV5850:0 "Melondo"
  PROV5851:0 "Lolodorf"
  PROV5852:0 "Nsola"
+ PROV6081:0 "Rouen"
+ PROV6082:0 "Lisieux"
+ PROV6083:0 "Vermandois"
+ PROV6084:0 "Champagne"
+ PROV6085:0 "Perche"
+ PROV6086:0 "Angers"
+ PROV6087:0 "Saumur"
+ PROV6088:0 "Courtenay"
+ PROV6089:0 "Arras"
+ PROV6090:0 "Porcien"
+ PROV6091:0 "Toul"
+ PROV6092:0 "Tonnerre"
+ PROV6093:0 "Bourgogne"
+ PROV6094:0 "Albret"
+ PROV6095:0 "Castillon"
+ PROV6096:0 "Tartas"
+ PROV6098:0 "Cahors"
+ PROV6099:0 "Buda"
+ PROV6100:0 "Bodrog"
+ PROV6101:0 "Loket"
+ PROV6102:0 "Kourim"
+ PROV6103:0 "Slany"
+ PROV6104:0 "Boleslav"
+ PROV6105:0 "Caslav"
+ PROV6106:0 "Znojmo"
+ PROV6107:0 "Troppau"
+ PROV6108:0 "Nisa"
+ PROV6109:0 "Breg"
+ PROV6110:0 "Schweidnitz"
+ PROV6111:0 "Javor"
+ PROV6112:0 "Krosno"
+ PROV6113:0 "Beirut"
+ PROV6114:0 "Lakatia"
+ PROV6115:0 "Sifilke"
+ PROV6116:0 "Tarsus"
+ PROV6117:0 "Sis"
+ PROV6118:0 "Yozgat"
+ PROV6119:0 "West Erzincan" 
