--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -114,3 +114,5 @@
  #My Desert
  my_desert:0 "My Desert, My Arrakis, My Dune."
  desc_my_desert:0 "The Spice Must Flow."
+ gecko_hyw:0 "Once more unto the breach"
+ desc_gecko_hyw:0 "Once more unto the breach, dear friends, once more; Or close the wall up with our English dead."
