--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -77,3 +77,10 @@ gecko.8.t:0 "Nobility Levies"
 gecko.8.d:0 "The levies previously provided by our Nobles have been put to good use. We now have an opportunity to press them for service again, however they will not like it."
 gecko.8.a:0 "Do nothing."
 gecko.8.b:0 "Seize back their influence and press them for levies again."
+
+#gecko hyw
+
+gecko.9.t:0 "The last Bastion of English France"
+gecko.9.d:0 "Following the disaster of Arras and the tragic death of the Duke of Bedford, we are left with just our Norman possessions in France. We must hold on to these at all costs if we are to claim victory."
+gecko.9.a:0 "Once more unto the breach, dear friends, once more; Or close the wall up with our English dead."
+
