last bastion of france set not to fire repeatedly

--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -83,4 +83,4 @@ gecko.8.b:0 "Seize back their influence and press them for levies again."
 gecko.9.t:0 "The last Bastion of English France"
 gecko.9.d:0 "Following the disaster of Arras and the tragic death of the Duke of Bedford, we are left with just our Norman possessions in France. We must hold on to these at all costs if we are to claim victory."
 gecko.9.a:0 "Once more unto the breach, dear friends, once more; Or close the wall up with our English dead."
-
+gecko.9_warning_tt:1 "§YEngland will lose this modifier if they lose Normandy to France§!"
