Revert "Trade nodes updated"
This reverts commit 90e2a894c947ef3e777996a3f17b917e38333d85.

--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -4,11 +4,10 @@
  novgorod:0 "Moscow"
  white_sea:0 "Novgorod"
  trade_company_caucasus:0 "Caucasian Charter"
- aleppo:0 "Mashriq"
+ aleppo:0 "Levant"
  venice:0 "Venice"
  tunis:0 "Algiers"
  ragusa:0 "Thrace"
  sicily:0 "Palermo"
  genua:0 "Milan"
  venice:0 "Rome"
- basra:0 "Arabia"
