maximum four subjects without Influence ideas, 3 vassals and 4 marches with influence ideas

--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -19,8 +19,8 @@
  h_tooltip_money_to_cn:0 "You may not give money to colonial nations owned by other countries."
  h_tooltip_many_allies:0 "You may have a maximum of five alliances."
  h_tooltip_from_many_allies:0 "The target already has five alliances."
- h_tooltip_many_marches_noinfluence:0 "You may have a maximum of four marches."
- h_tooltip_many_marches_influence:0 "You may have a maximum of six subjects."
+ h_tooltip_many_marches_noinfluence:0 "You may have a maximum of four subjects without Influence ideas."
+ h_tooltip_many_marches_influence:0 "You may have a maximum of three subjects and four marches with Influence ideas."
  h_tooltip_move_capital:0 "You may not move your capital to the new world."
  h_tooltip_cn_colonize:0 "You may not colonize provinces outside of your colonial region."
  tribute_system:0 "Empowered Subjects"
