--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -52,7 +52,7 @@
  conquest_of_saint_petersburg:0 "Conquest of St. Petersburg"
  conquest_of_sarai:0 "Conquest of Sarai"
  conquest_of_fez:0 "Conquest of Fez"
- conquest_of_isfahan:0 "Conquest of Isfahan"
+ conquest_of_isfahan:0 "Conquest of Tabriz"
  conquest_of_samarkand:0 "Conquest of Samarkand"
 
 
