--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -28,9 +28,9 @@
  free_colonist_desc:0 "Recent discoveries have lead to a great demand for Crown sponsored colonies."
  force_urbanisation_title:0 "Force Urbanisation"
  force_urbanisation_desc:0 "Although our state is developing at a pleasing rate, it could be faster. We could focus all our resources into centralising the state. However diverting funding away from the army will have its consequences.."
- urbanisation:0 "Urbanisation"
- urbanisation_title:0 "Urbanisation"
- urbanisation_desc:0 "Focus our efforts into centralising and developing the state,"
+ urbanisation:0 "Golden Age (Economic)"
+ urbanisation_title:0 "Golden Age (Economic)"
+ urbanisation_desc:0 "50 years of reduced power cost, increased goods produced and cheaper construction cost. No longer part of the normal Golden Age ability."
  sm_hire_recruitmaster_title:0 "Hire a Master Recruiter"
  sm_hire_recruitmaster_desc:0 "It would be wise to use the foreign expertise available to us to help bring fresh manpower into our ranks."
  PR_manpower_edict_title:0 "National Manpower Edict"
