--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -69,6 +69,7 @@
  desc_ethiopian_integration:0 "We have begun to install a new administration in Ethiopia."
  mam_african_market:0 "African Market"
  desc_mam_african_market:0 "We have conquered the narrow passage to the Sahel. Let our traders follow the flow of trade."
+ turks_defeated:0 "Turks Defeated"
 
  #Ethiopia
  gecko_ethiopia_highlands_and_mountains_modifier:0 "Temper the Roof of Africa"
