--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -42,3 +42,6 @@
  PR_manpower_edict_removal_tooltip:0 "Has been 1 year since activating National Manpower Edict."
  PR_manpower_edict_province:0 "Provincial Manpower Edict"
  timurid_nation_title:0 "Reform the Timurid Empire"
+ mamluks_subjugated:0 "Mamluks Subjugated"
+ subjugate_mamluks_title:0 "Subjugate Mamluks"
+ subjugate_mamluks_desc:0 ""
