conquest of herat added

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -54,6 +54,7 @@
  conquest_of_fez:0 "Conquest of Fez"
  conquest_of_isfahan:0 "Conquest of Tabriz"
  conquest_of_samarkand:0 "Conquest of Samarkand"
+ conquest_of_herat:0 "Conquest of Herat"
 
 
  #Advisor Event modifiers
