--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -45,3 +45,5 @@
  mamluks_subjugated:0 "Mamluks Subjugated"
  subjugate_mamluks_title:0 "Subjugate Mamluks"
  subjugate_mamluks_desc:0 ""
+ h_found_riyadh_title:0 "Found the City of Riyadh"
+ h_found_riyadh_desc:0 "With the construction of the walled oases, the Najd has become the center of our empire in all but name. Let us construct a new capital for Arabia in Kharj. It will take the name 'Riyadh', after the gardens of the local oases."
