6 new provinces added to transoxiana region

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3731,3 +3731,12 @@
 PROV6124:0 "Padua"
 PROV6125:0 "Senigallia"
 PROV6126:0 "Otranto"
+PROV6127:0 "Dscham"
+PROV6128:0 "Tottu"
+PROV6129:0 "Hissar"
+PROV6130:0 "Katty kurgan"
+PROV6131:0 "Iskander kul"
+PROV6132:0 "Karatepe"
+PROV6136:0 "Karnah"
+PROV6137:0 "Paikend"
+PROV6138:0 "Kassan-basar"
