more provinces in siberia uncolonised

--- a/localisation/gecko_area_names_l_english.yml
+++ b/localisation/gecko_area_names_l_english.yml
@@ -13,3 +13,4 @@
  pr_africa_area_12:0 "Edea Area"
  pr_africa_area_13:0 "Nkoua Area"
  pr_africa_area_14:0 "Melondo Area"
+ samarkand_area:0 "Samarkand"
