--- a/localisation/gc_areas_regions_l_english.yml
+++ b/localisation/gc_areas_regions_l_english.yml
@@ -14,3 +14,22 @@ opole_area_adj:0 "Opolen"
 breg_area:0 "Breg"
 breg_name:0 "Breg"
 breg_area_adj:0 "Bregen"
+pr_africa_area_1:0 "Walatah"
+pr_africa_area_2:0 "Nema"
+pr_africa_area_3:0 "Tuat"
+pr_africa_area_4:0 "Aney"
+pr_africa_area_5:0 "Madama"
+pr_africa_area_6:0 "Djado"
+pr_africa_area_7:0 "Al Abyad"
+pr_africa_area_8:0 "Tajarhi"
+pr_africa_area_9:0 "Foya"
+pr_africa_area_10:0 "Daloa"
+pr_africa_area_11:0 "Kumba"
+pr_africa_area_12:0 "Edea"
+pr_africa_area_13:0 "Nkoua"
+pr_africa_area_14:0 "Melondo"
+samarkand_area:0 "Samarkand"
+urmia_area:0 "Urmia"
+ardabil_area:0 "Ardabil"
+teheran_area:0 "Teheran"
+astrabad_area:0 "Astrabad"
