Improved Weaponry age ability 0.1 inf fire for pluto and eco idea group

--- a/localisation/gecko_ages_l_english.yml
+++ b/localisation/gecko_ages_l_english.yml
@@ -10,3 +10,4 @@
  ab_bukhara_arty:0 "Bukharan Artillery"
  ab_arabia_speed:0 "Arabian Horses"
  ab_hesse_mercs:0 "Hessian Mercenaries"
+ ab_improved_weaponry:0 "Improved Weaponry"
