Inf fire age abilities

--- a/localisation/gecko_ages_l_english.yml
+++ b/localisation/gecko_ages_l_english.yml
@@ -10,4 +10,6 @@
  ab_bukhara_arty:0 "Bukharan Artillery"
  ab_arabia_speed:0 "Arabian Horses"
  ab_hesse_mercs:0 "Hessian Mercenaries"
- ab_improved_weaponry:0 "Improved Weaponry"
+ ab_improved_weaponry1:0 "Improved Weaponry"
+ ab_improved_weaponry2:0 "Improved Weaponry"
+ ab_improved_weaponry3:0 "Improved Weaponry"
