Decision to buy military advisor for ADM added

--- a/localisation/gecko_advisors_l_english.yml
+++ b/localisation/gecko_advisors_l_english.yml
@@ -7,3 +7,6 @@
 
  gc_inquisitor:0 "Minister of Culture"
  gc_inquisitor_dec:0 "Uhhh"
+
+ siege_specialist:0 "Siege Specialist"
+ siege_specialist_desc:0 "Once more into the breach"
