--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -31,7 +31,7 @@
  urbanisation:0 "Golden Age (Economic)"
  urbanisation_title:0 "Golden Age (Economic)"
  urbanisation_desc:0 "50 years of reduced power cost, increased goods produced and cheaper construction cost. No longer part of the normal Golden Age ability."
- sm_hire_recruitmaster_title:0 "Hire a Master Recruiter"
+ sm_hire_recruitmaster_title:0 "Hire a -25% Cost Master Recruiter"
  sm_hire_recruitmaster_desc:0 "It would be wise to use the foreign expertise available to us to help bring fresh manpower into our ranks."
  PR_manpower_edict_title:0 "National Manpower Edict"
  PR_manpower_edict_desc:0 "Activate a manpower edict modifier in all states without an activated edict. No edicts can be applied to states with this modifier. Can be removed in 1 year."
@@ -47,3 +47,5 @@
  subjugate_mamluks_desc:0 ""
  h_found_riyadh_title:0 "Found the City of Riyadh"
  h_found_riyadh_desc:0 "With the construction of the walled oases, the Najd has become the center of our empire in all but name. Let us construct a new capital for Arabia in Kharj. It will take the name 'Riyadh', after the gardens of the local oases."
+ gecko_recruit_military_advisor_title:0 "Recruit Military Advisor"
+ gecko_recruit_military_advisor_desc:0 ""
